--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -4,7 +4,7 @@
     margin: 20px;
     background-color: #f9f9f9;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgb(244, 239, 239);
   }
   
   .about-us-page h1 {
