--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@
       /* color: white; */
     }
 
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    
     .landing-page {
       padding: 50px;
       text-align: center;
